Fixed webpack config. Pointed scripts to bundle js. Implemented invisible textareas. Improved responsible font.

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,13 @@
   width: 25%;
 }
 
-textarea {
-    font-size: 2vw;
+textarea.invisible {
+  background: transparent;
+  border: none;
 }
 
+@media (max-width: 700px) {
+  textarea {
+    font-size: 2vw;
+  }
+}
